\name{NEWS}
\title{News for Package \pkg{cardelino}}

\section{Changes in version 0.1.0}{
  \itemize{
    \item add examples and remove unnecessary functions to pass biocCheck
  }
}