@@ -1,6 +1,17 @@
 \name{NEWS}
 \title{News for Package \pkg{cardelino}}
 
+
+\section{Changes in version 0.2.5}{
+  \itemize{
+    \item change donor_id to vireo
+    \item fix minor bug for n_vars in vireo (i.e., donor_id)
+    \item add vignette for demultiplexing without genotype
+    \item change assessment for doublet detection indicator to prob_doublet
+  }
+}
+
+
 \section{Changes in version 0.1.0}{
   \itemize{
     \item add examples and remove unnecessary functions to pass biocCheck
